plugin/src/test/resources/annotator/perl/syntax/fancyMethodCall536.code
my $object = <error descr="Using of fancy calls is disabled since v5.36, use ParentPackage->new()">new ParentPackage::</error>();
